Updated to v1.2.0