@@ -5,15 +5,18 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
 
 import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
 import java.io.UncheckedIOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 /**
  * Contains all configuration options and the logic for loading config.
  */
 public class Config {
-	private static final Path CONFIG_FILE = Path.of("config", "speed_carts.yaml");
+	private static final Path CONFIG_FILE = Paths.get("config", "speed_carts.yaml");
 
 	private final double defaultSpeed;
 	private final double minimumSpeed;
@@ -36,12 +39,16 @@ public class Config {
 
 	private void ensureConfigExists() throws IOException {
 		if (!Files.exists(CONFIG_FILE)) {
-			var out = Files.newOutputStream(CONFIG_FILE);
-			var defaultConfigInputStream = SpeedCarts.class.getClassLoader().getResourceAsStream("default_config.yaml");
+			OutputStream out = Files.newOutputStream(CONFIG_FILE);
+			InputStream defaultConfigInputStream = SpeedCarts.class.getClassLoader().getResourceAsStream("default_config.yaml");
 			if (defaultConfigInputStream == null) {
 				throw new IOException("Could not load default_config.yaml");
 			}
-			defaultConfigInputStream.transferTo(out);
+			byte[] buffer = new byte[8192];
+			int bytesRead;
+			while ((bytesRead = defaultConfigInputStream.read(buffer)) > 0) {
+				out.write(buffer, 0, bytesRead);
+			}
 			defaultConfigInputStream.close();
 			out.close();
 		}
